--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 08:59:00 AM</p>
+    <p class="lastupdate">09/06/2020 09:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">77.3&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">77.3&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">77.3&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.7&#176;F</td>
+        <td class="data">51.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">40%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">3 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.5&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="08:58:02 AM">
-            29.951</span><br/>
+          <span title="09:01:02 AM">
+            29.952</span><br/>
           <span title="12:26:01 AM">
             29.907</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="08:58:02 AM (Sunday)">
-            29.951</span><br/>
+          <span title="09:01:02 AM (Sunday)">
+            29.952</span><br/>
           <span title="12:26:01 AM (Sunday)">
             29.907</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          310
+          314
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          310
+          314
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 18 hours, 12 minutes</td>
+      <td class="data">4 days, 18 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 18 hours, 12 minutes</td>
+      <td class="data">4 days, 18 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
