--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 09:09:00 AM</p>
+    <p class="lastupdate">09/06/2020 09:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">78.5&#176;F</td>
+        <td class="data">79.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">78.5&#176;F</td>
+        <td class="data">79.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">78.5&#176;F</td>
+        <td class="data">79.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.5&#176;F</td>
+        <td class="data">51.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">39%</td>
+        <td class="data">38%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.949 inHg (0.025)</td>
+        <td class="data">29.949 inHg (0.027)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">2 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.0&#176;F</td>
+        <td class="data">79.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          317
+          319
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          317
+          319
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 18 hours, 22 minutes</td>
+      <td class="data">4 days, 18 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 18 hours, 22 minutes</td>
+      <td class="data">4 days, 18 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
