--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 09:19:00 AM</p>
+    <p class="lastupdate">09/06/2020 09:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">80.0&#176;F</td>
+        <td class="data">80.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">80.0&#176;F</td>
+        <td class="data">80.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">80.0&#176;F</td>
+        <td class="data">80.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.1&#176;F</td>
+        <td class="data">52.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.949 inHg (0.023)</td>
+        <td class="data">29.947 inHg (0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.6&#176;F</td>
+        <td class="data">79.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,13 +235,13 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:18:48 AM">
+          <span title="09:23:16 AM">
             52.8</span><br/>
           <span title="12:02:45 AM">
             44.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:18:48 AM (Sunday)">
+          <span title="09:23:16 AM (Sunday)">
             52.8</span><br/>
           <span title="12:02:45 AM (Sunday)">
             44.8</span>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          321
+          323
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          321
+          323
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 18 hours, 32 minutes</td>
+      <td class="data">4 days, 18 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 18 hours, 32 minutes</td>
+      <td class="data">4 days, 18 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
