--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 09:59:00 AM</p>
+    <p class="lastupdate">09/06/2020 10:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.4&#176;F</td>
+        <td class="data">86.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.4&#176;F</td>
+        <td class="data">86.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.4&#176;F</td>
+        <td class="data">86.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.8&#176;F</td>
+        <td class="data">53.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.952 inHg (0.015)</td>
+        <td class="data">29.951 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NE (45&#176;)</td>
+        <td class="data">2 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.1&#176;F</td>
+        <td class="data">81.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:58:36 AM">
-            85.4</span><br/>
+          <span title="10:03:24 AM">
+            86.0</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:58:36 AM (Sunday)">
-            85.4</span><br/>
+          <span title="10:03:24 AM (Sunday)">
+            86.0</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:58:36 AM" class="hival">
-            85.4</span>
+          <span title="10:03:24 AM" class="hival">
+            86.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:58:36 AM (Sunday)" class="hival">
-            85.4</span>
+          <span title="10:03:24 AM (Sunday)" class="hival">
+            86.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:54:20 AM">
-            54.0</span><br/>
+          <span title="10:02:54 AM">
+            54.2</span><br/>
           <span title="12:02:45 AM">
             44.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:54:20 AM (Sunday)">
-            54.0</span><br/>
+          <span title="10:02:54 AM (Sunday)">
+            54.2</span><br/>
           <span title="12:02:45 AM (Sunday)">
             44.8</span>
         </td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:54:02 AM">
-            29.953</span><br/>
+          <span title="09:59:02 AM">
+            29.954</span><br/>
           <span title="12:26:01 AM">
             29.907</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:54:02 AM (Sunday)">
-            29.953</span><br/>
+          <span title="09:59:02 AM (Sunday)">
+            29.954</span><br/>
           <span title="12:26:01 AM (Sunday)">
             29.907</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          340
+          341
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          340
+          341
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 19 hours, 12 minutes</td>
+      <td class="data">4 days, 19 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 19 hours, 12 minutes</td>
+      <td class="data">4 days, 19 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
