--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 10:14:00 AM</p>
+    <p class="lastupdate">09/06/2020 10:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.5&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.5&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.5&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.0&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">31%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.950 inHg (0.010)</td>
+        <td class="data">29.951 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph N (0&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.4&#176;F</td>
+        <td class="data">81.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:28 AM">
-            87.5</span><br/>
+          <span title="10:18:46 AM">
+            88.4</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:13:28 AM (Sunday)">
-            87.5</span><br/>
+          <span title="10:18:46 AM (Sunday)">
+            88.4</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:28 AM" class="hival">
-            87.5</span>
+          <span title="10:18:46 AM" class="hival">
+            88.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:13:28 AM (Sunday)" class="hival">
-            87.5</span>
+          <span title="10:18:46 AM (Sunday)" class="hival">
+            88.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:10:44 AM">
-            54.5</span><br/>
+          <span title="10:17:44 AM">
+            54.6</span><br/>
           <span title="12:02:45 AM">
             44.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:10:44 AM (Sunday)">
-            54.5</span><br/>
+          <span title="10:17:44 AM (Sunday)">
+            54.6</span><br/>
           <span title="12:02:45 AM (Sunday)">
             44.8</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          344
+          345
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          344
+          345
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 19 hours, 27 minutes</td>
+      <td class="data">4 days, 19 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 19 hours, 27 minutes</td>
+      <td class="data">4 days, 19 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
