--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 10:24:00 AM</p>
+    <p class="lastupdate">09/06/2020 10:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.6&#176;F</td>
+        <td class="data">90.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.6&#176;F</td>
+        <td class="data">90.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.6&#176;F</td>
+        <td class="data">90.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.0&#176;F</td>
+        <td class="data">53.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">29%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.946 inHg (0.007)</td>
+        <td class="data">29.941 inHg (0.000)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNE (22&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.6&#176;F</td>
+        <td class="data">81.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:23:54 AM">
-            89.6</span><br/>
+          <span title="10:28:10 AM">
+            90.3</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:23:54 AM (Sunday)">
-            89.6</span><br/>
+          <span title="10:28:10 AM (Sunday)">
+            90.3</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:23:54 AM" class="hival">
-            89.6</span>
+          <span title="10:28:10 AM" class="hival">
+            90.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:23:54 AM (Sunday)" class="hival">
-            89.6</span>
+          <span title="10:28:10 AM (Sunday)" class="hival">
+            90.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          346
+          347
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          346
+          347
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 19 hours, 37 minutes</td>
+      <td class="data">4 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 19 hours, 37 minutes</td>
+      <td class="data">4 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
